# uf90

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  fpm-unicode  fpm.toml  install.sh  pyproject.toml  uf90.sh
app/: uf90_sync.f90  uf90_sync_main.f90
docs/: SYMBOLS.md  USAGE.md
examples/: Makefile  exemplo.f90  exemplo.uf90
python/: README.md  unicode_fortran_refactored.py
src/: uf90_constants.f90  uf90_consts.f90  uf90_file_translator.f90  uf90_rules.f90  uf90_translation_rules.f90
src/uf90/: __init__.py  cli.py  mapping.py  sync.py  translator.py
tests/: test_check_mode.py  test_regression_atomnumber.py  test_translator_basic.py
utils/: README.md  fortran-unicode.code-snippets  fortran-unicode.lua
